--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# mac os files
+.DS_Store
