--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,7 +7,7 @@ mypy==0.812
 tox==3.14.0
 coverage==4.5.4
 Sphinx==1.8.5
-twine==1.14.0
+twine==3.4.1
 
 pytest==5.1
 pytest-runner==5.1
@@ -15,6 +15,8 @@ pytest-mock==3.6.1
 featureflags~=0.1.0
 setuptools~=54.2.0
 httpx~=0.16.1
-attrs~=20.3.0
+attrs~=21.2.0
 
 pyjwt==2.0.1
+
+openapi-python-client~=0.9.2
