metrics - initial commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
-    "mypy.runUsingActiveInterpreter": true,
-    "python.pythonPath": "venv/bin/python"
+    "python.defaultInterpreterPath": "venv/bin/python",
+    "mypy.runUsingActiveInterpreter": true
 }
