--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,10 @@ steps:
   image: python:3.9
   commands:
   - make fmt
+- name: Lint 
+  image: python:3.9
+  commands:
+  - make lint
 
 trigger:
   ref:
