--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
   - name: Test
     image: python:3.9
     commands:
-      - pip install -r requirements.txt
+      - pip install -r requirements_dev.txt
       - pytest
   - name: Format
     image: python:3.9
