(maint) add linter step to ci

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,10 +4,11 @@ type: docker
 name: default
 
 steps:
-  - name: Test + build
+  - name: Install Dependancies
     image: python:3.9
     commands:
       - pip install flake8 pytest
       - pip install -r requirements_dev.txt
-      - pytest
       - make fmt
+      - make lint
+      - make test
