--- a/config-metrics.yaml
+++ b/config-metrics.yaml
@@ -1,2 +1,2 @@
 project_name_override: featureflags
-package_name_override: featureflags/metrics
+package_name_override: featureflags/openapi/metrics
