--- a/client.yaml
+++ b/client.yaml
@@ -11,16 +11,12 @@ servers:
     description: no host specified
   - url: 'http://localhost:3000/api/1.0'
     description: CfClient description
-tags:
-  - name: client
 paths:
   '/client/env/{environmentUUID}/feature-configs':
     get:
       summary: Get all feature flags activations
       description: All feature flags with activations in project environment
       operationId: GetFeatureConfig
-      tags:
-        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -28,7 +24,6 @@ paths:
           description: Unique identifier for the environment object in the API.
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -44,8 +39,6 @@ paths:
     get:
       summary: Get feature config
       operationId: GetFeatureConfigByIdentifier
-      tags:
-        - client
       parameters:
         - name: identifier
           in: path
@@ -59,7 +52,6 @@ paths:
           description: Unique identifier for the environment object in the API.
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -74,8 +66,6 @@ paths:
       summary: Retrieve all segments.
       description: Used to retrieve all segments for certain account id.
       operationId: GetAllSegments
-      tags:
-        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -83,7 +73,6 @@ paths:
           description: Unique identifier for the environment object in the API.
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -108,8 +97,6 @@ paths:
       summary: Retrieve a segment by identifier
       description: Used to retrieve a segment for a certain account id by identifier
       operationId: GetSegmentByIdentifier
-      tags:
-        - client
       parameters:
         - name: identifier
           in: path
@@ -123,7 +110,6 @@ paths:
           description: Unique identifier for the environment object in the API
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -146,8 +132,6 @@ paths:
       summary: Authenticate with the admin server.
       description: Used to retrieve all target segments for certain account id.
       operationId: Authenticate
-      tags:
-        - client
       requestBody:
         content:
           application/json:
@@ -172,8 +156,6 @@ paths:
     get:
       summary: Get feature evaluations for target
       operationId: GetEvaluations
-      tags:
-        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -187,27 +169,21 @@ paths:
           description: Unique identifier for the target object in the API.
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
         '200':
           description: OK
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/Pagination'
-                  - type: object
-                    properties:
-                      evaluations:
-                        $ref: '#/components/schemas/Evaluations'
+          # content:
+          #   application/json:
+          #     schema:
+          #       allOf:
+          #         - $ref: '#/components/schemas/Pagination'
+          #         - $ref: '#/components/schemas/Evaluations'
   '/client/env/{environmentUUID}/target/{target}/evaluations/{feature}':
     get:
       summary: Get feature evaluations for target
       operationId: GetEvaluationByIdentifier
-      tags:
-        - client
       parameters:
         - name: environmentUUID
           in: path
@@ -227,7 +203,6 @@ paths:
           description: Unique identifier for the target object in the API.
           schema:
             type: string
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -241,15 +216,12 @@ paths:
     get:
       summary: Stream endpoint.
       operationId: Stream
-      tags:
-        - client
       parameters:
         - in: header
           name: API-Key
           schema:
             type: string
           required: true
-        - $ref: '#/components/parameters/clusterQueryOptionalParam'
       security:
         - BearerAuth: []
       responses:
@@ -278,93 +250,61 @@ components:
   schemas:
     FeatureState:
       type: string
-      description: The state of a flag either off or on
       enum:
         - 'on'
         - 'off'
     Variation:
       type: object
-      description: A variation of a flag that can be returned to a target
       properties:
         identifier:
           type: string
-          description: The unique identifier for the variation
-          example: off-variation
         value:
           type: string
-          description: >-
-            The variation value to serve such as true or false for a boolean
-            flag
-          example: 'true'
         name:
           type: string
-          description: The user friendly name of the variation
-          example: Off VAriation
         description:
           type: string
-          description: A description of the variation
       required:
         - identifier
         - value
     Clause:
       type: object
-      description: A clause describes what conditions are used to evaluate a flag
       properties:
         id:
           type: string
-          description: The unique ID for the clause
-          example: 32434243
         attribute:
           type: string
-          description: >-
-            The attribute to use in the clause.  This can be any target
-            attribute
-          example: identifier
         op:
           type: string
-          description: 'The type of operation such as equals, starts_with, contains'
-          example: starts_with
         values:
           type: array
-          description: The values that are compared against the operator
           items:
             type: string
         negate:
           type: boolean
-          description: Is the operation negated?
-          example: false
       required:
+        - id
         - attribute
         - op
         - negate
         - values
     WeightedVariation:
       type: object
-      description: >-
-        A variation and the weighting it should receive as part of a percentage
-        rollout
       properties:
         variation:
           type: string
-          description: The variation identifier
-          example: off-variation
         weight:
           type: integer
-          description: The weight to be given to the variation in percent
-          example: 50
       required:
         - variation
         - weight
     Distribution:
       type: object
-      description: Describes a distribution rule
       properties:
         bucketBy:
           type: string
-          description: The attribute to use when distributing targets across buckets
         variations:
           type: array
-          description: A list of variations and the weight that should be given to each
           items:
             $ref: '#/components/schemas/WeightedVariation'
       required:
@@ -372,9 +312,6 @@ components:
         - variations
     Serve:
       type: object
-      description: >-
-        Describe the distribution rule and the variation that should be served
-        to the target
       properties:
         distribution:
           $ref: '#/components/schemas/Distribution'
@@ -382,20 +319,13 @@ components:
           type: string
     ServingRule:
       type: object
-      description: The rule used to determine what variation to serve to a target
       properties:
         ruleId:
           type: string
-          description: The unique identifier for this rule
         priority:
           type: integer
-          description: >-
-            The rules priority relative to other rules.  The rules are evaluated
-            in order with 1 being the highest
-          example: 1
         clauses:
           type: array
-          description: A list of clauses to use in the rule
           items:
             $ref: '#/components/schemas/Clause'
         serve:
@@ -404,16 +334,14 @@ components:
         - priority
         - clauses
         - serve
+        - ruleId
     Prerequisite:
       type: object
-      description: Feature Flag pre-requisites
       properties:
         feature:
           type: string
-          description: The feature identifier that is the prerequisite
         variations:
           type: array
-          description: A list of variations that must be met
           items:
             type: string
       required:
@@ -421,35 +349,25 @@ components:
         - variations
     TargetMap:
       type: object
-      description: Target map provides the details of a target that belongs to a flag
       properties:
         identifier:
           type: string
-          description: The identifier for the target
         name:
           type: string
-          description: The name of the target
       required:
-        - identifier
+        - idenfifier
         - name
     VariationMap:
       type: object
-      description: >-
-        A mapping of variations to targets and target groups (segments).  The
-        targets listed here should receive this variation.
       properties:
         variation:
           type: string
-          description: The variation identifier
-          example: off-variation
         targets:
           type: array
-          description: A list of target mappings
           items:
             $ref: '#/components/schemas/TargetMap'
         targetSegments:
           type: array
-          description: A list of target groups (segments)
           items:
             type: string
       required:
@@ -503,125 +421,88 @@ components:
         - state
         - kind
         - variations
+        - defaultTarget
         - offVariation
         - defaultServe
     Tag:
       type: object
-      description: A Tag object used to tag feature flags - consists of name and identifier
+      description: A name and value pair.
       properties:
         name:
           type: string
-          description: The name of the tag
-          example: feature-flag-tag-1
-        identifier:
+        value:
           type: string
-          description: The identifier of the tag
-          example: feature-flag-tag-1
       required:
         - name
-        - identifier
     Segment:
       type: object
-      description: A Target Group (Segment) response
       properties:
         identifier:
           type: string
-          description: Unique identifier for the target group.
+          description: Unique identifier for the segment.
         name:
           type: string
-          description: Name of the target group.
+          description: Name of the segment.
           example: Beta Testers
         environment:
           type: string
-          description: The environment this target group belongs to
-          example: Production
         tags:
           type: array
-          description: Tags for this target group
           items:
             $ref: '#/components/schemas/Tag'
         included:
           type: array
-          description: A list of Targets who belong to this target group
           items:
             $ref: '#/components/schemas/Target'
         excluded:
           type: array
-          description: A list of Targets who are excluded from this target group
           items:
             $ref: '#/components/schemas/Target'
         rules:
           type: array
           items:
             $ref: '#/components/schemas/Clause'
-        servingRules:
-          type: array
-          items:
-            $ref: '#/components/schemas/GroupServingRule'
           description: >-
             An array of rules that can cause a user to be included in this
             segment.
         createdAt:
           type: integer
-          description: The data and time in milliseconds when the group was created
           format: int64
         modifiedAt:
           type: integer
-          description: The data and time in milliseconds when the group was last modified
           format: int64
         version:
           type: integer
-          description: >-
-            The version of this group.  Each time it is modified the version is
-            incremented
-          example: 1
           format: int64
       required:
         - identifier
         - name
     Target:
       type: object
-      description: A Target object
       properties:
         identifier:
           type: string
-          description: The unique identifier for this target
-          example: john-doe
         account:
           type: string
-          description: The account ID that the target belongs to
-          example: abcXDdffdaffd
         org:
           type: string
-          description: The identifier for the organization that the target belongs to
         environment:
           type: string
-          description: The identifier for the environment that the target belongs to
         project:
           type: string
-          description: The identifier for the project that this target belongs to
         name:
           type: string
-          description: The name of this Target
-          example: John Doe
         anonymous:
           type: boolean
-          description: Indicates if this target is anonymous
         attributes:
           type: object
-          description: a JSON representation of the attributes for this target
-          example:
-            age: 20
-            location: Belfast
         createdAt:
           type: integer
-          description: The date and time in milliseconds when this Target was created
           format: int64
-        segments:
-          type: array
-          description: A list of Target Groups (Segments) that this Target belongs to
-          items:
-            $ref: '#/components/schemas/Segment'
+        # segments:
+        #   type: array
+        #   items:
+        #     $ref: '#/components/schemas/Segment'
       required:
         - identifier
         - name
@@ -629,42 +510,13 @@ components:
         - project
         - account
         - org
-    GroupServingRule:
-      type: object
-      description: The rule used to determine what variation to serve to a target
-      properties:
-        ruleId:
-          type: string
-          description: The unique identifier for this rule
-        priority:
-          type: integer
-          description: >-
-            The rules priority relative to other rules.  The rules are evaluated
-            in order with 1 being the highest
-          example: 1
-        clauses:
-          type: array
-          description: A list of clauses to use in the rule
-          items:
-            $ref: '#/components/schemas/Clause'
-      required:
-        - ruleId
-        - clauses
-        - priority
     Error:
       type: object
       properties:
         code:
           type: string
-          description: The http error code
-          example: 404
         message:
           type: string
-          description: The reason the request failed
-          example: 'Error retrieving projects, organization ''default_org'' does not exist'
-        details:
-          type: object
-          description: Additional details about the error
       required:
         - code
         - message
@@ -701,25 +553,16 @@ components:
       properties:
         version:
           type: integer
-          description: >-
-            The version of this object.  The version will be incremented each
-            time the object is modified
-          example: 5
         pageCount:
           type: integer
-          description: The total number of pages
-          example: 100
         itemCount:
           type: integer
-          description: The total number of items
           example: 1
         pageSize:
           type: integer
-          description: The number of items per page
           example: 1
         pageIndex:
           type: integer
-          description: The current page
           example: 0
       required:
         - pageCount
@@ -745,69 +588,11 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Evaluation'
-    KeyValue:
-      type: object
-      properties:
-        key:
-          type: string
-        value:
-          type: string
-      required:
-        - key
-        - value
-    TargetData:
-      type: object
-      properties:
-        identifier:
-          type: string
-        name:
-          type: string
-        attributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-      required:
-        - name
-        - identifier
-        - attributes
   securitySchemes:
-    ApiKeyAuth:
-      type: apiKey
-      in: header
-      name: api-key
     BearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
-  parameters:
-    clusterQueryOptionalParam:
-      name: cluster
-      in: query
-      required: false
-      description: Unique identifier for the cluster for the account
-      schema:
-        type: string
-    environmentPathParam:
-      name: environmentUUID
-      in: path
-      required: true
-      description: environment parameter in query.
-      schema:
-        type: string
-    pageNumber:
-      name: pageNumber
-      in: query
-      required: false
-      description: PageNumber
-      schema:
-        type: integer
-    pageSize:
-      name: pageSize
-      in: query
-      required: false
-      description: PageSize
-      schema:
-        type: integer
   responses:
     Unauthenticated:
       description: Unauthenticated
@@ -829,12 +614,6 @@ components:
             $ref: '#/components/schemas/Error'
     InternalServerError:
       description: Internal server error
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Error'
-    BadRequest:
-      description: Bad request
       content:
         application/json:
           schema:
